--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -9,6 +9,7 @@ browser = chrome
 amazonUrl = https://www.amazon.com
 youtubeUrl = https://www.youtube.com
 qdUrl = https://www.qualitydemy.com
+webSecurityUrl=https://zero.webappsecurity.com/
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
