--- a/src/configuration.properties
+++ b/src/configuration.properties
@@ -10,6 +10,8 @@ amazonUrl = https://www.amazon.com
 youtubeUrl = https://www.youtube.com
 qdUrl = https://www.qualitydemy.com
 webSecurityUrl=https://zero.webappsecurity.com/
+webUniUrl=http://webdriveruniversity.com/IFrame/index.html
+qaSmartCardLink=https://qa.smartcardlink.com
 
 amazonAranacakKelime = Nutella
 amazonAranacakKelime2 = Java
